# HDP

./: .gitignore  .gitmodules  README.md  compose.yml  httpd.conf  install.py  main.py  pyproject.toml  requirements.txt
crawl/: main.js  package-lock.json  package.json  volume.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  apis.ts  config.ts  main.tsx
frontend/src/assets/: main.css
instructions/: gemini-ner.txt  gemini.txt  ner-system.txt  ner-user.txt  summarizer-system.txt  summarizer-user.txt
notebooks/: DatasetGeneration.ipynb  EntitiesGeneratorCPU.ipynb  EntitiesGeneratorGPU.ipynb  EntitiesGenerator_CPU.ipynb  EntitiesOverlapScore.ipynb  EvaluatorDatasetGenerator.ipynb  EvaluatorScore.ipynb  FineTuneGeneratorModel.ipynb  FineTuneSummarizerOutputs.ipynb  FineTuneT5.ipynb  HallucinationClassifier.ipynb  Hallucination_Classifier_Dataset_Generator.ipynb  Readd_Binary_Overlap_Feature.ipynb
notebooks/notebooks-raw/: EntitiesGenerator_GPU.ipynb  EntitiesOverlapScore.ipynb  Hallucination_Classifier_Dataset_Generator.ipynb  finetunedmodeloutputs.ipynb
public/: index.html
scrap/: main.js  package-lock.json  package.json
scripts/: ExtractEntities.py  FineTuneBart.py  FineTuneSummarizer.py  GeminiHallucination.py  GenerateHallucination.py  GenerateHallucinationGemini.py  GenerateHallucinationLlama.py  ScienceDirectDatabase.py  SummarizerOutputs.py  config.cfg  dataset.sql  entities.py  summarize.py
scripts/finetune/: bart.py  gemma.py  llama.py  metrics.py  qwen.py  score.py
scripts/instruction/: finetune-system.txt  gemini.txt  multiturn.json
sql/: dataset.sql
src/: api.py  config.py  dense_net.py  extractor.py  hypermixsub.py  lifespan.py  memory.py  prompt.py  summarizer.py  transfer.py  utils.py  web.py
templates/: application.html
utils/: dataset_generation.py  extractor.py  lifespan.py  memory.py  summarizer.py  transfer.py
