[project]
name = "hallucination-detection-pipeline"
version = "0.1.0"
description = "Summarization and classification of abstracts with PG-LLaMA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.5.0",
    "fastapi[standard]>=0.115.12",
    "huggingface>=0.0.1",
    "huggingface-hub>=0.30.2",
    "loguru>=0.7.3",
    "torch>=2.4<2.8",
    "unsloth",
    "xformers",
    "triton<=3.1.0",
    "psutil>=7.0.0",
    "setuptools>=80.4.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
build = ["setuptools"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
